@@ -1,7 +1,7 @@
 <module>
     <manifestVersion>1.0.0</manifestVersion>
     <symbolicName>beam-meris-cloud</symbolicName>
-    <version>1.6.2</version>
+    <version>1.7</version>
     <name>MERIS Cloud Probability Processor</name>
 
     <description>
@@ -9,6 +9,8 @@
     </description>
     <changelog>
         <![CDATA[
+        Changes in 1.7<br/>
+        [BEAM-1609] - Convert Cloud Processor to GPF<br/>
         Changes in 1.6.2<br>
         Deprecated API.<br/>
         Changes in 1.6.1<br>
