@@ -43,6 +43,7 @@ New BEAM Features
 
 Improvements
 
+[BEAM-1609] Convert Cloud Processor to GPF
 [BEAM-1592] Line-Geometries shall be easier selectable
 [BEAM-1588] Show close button on internal frames' tabs
 [BEAM-1587] Allow closing internal frames by click with middle mouse button
